--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 
-spring.h2.console.path=/h2-console
+#spring.h2.console.path=/h2-console
 
-spring.datasource.url=jdbc:h2:mem:homebanking
+#spring.datasource.url=jdbc:h2:mem:homebanking
 
 spring.jackson.serialization.INDENT_OUTPUT=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/Homebanking
+
+spring.datasource.username=homebankingapp
+
+spring.datasource.password=123
+
+spring.jpa.generate-ddl=true
+
+spring.jpa.hibernate.ddl-auto=none
